Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25815

mariabackup crash or debug assert with --backup --databases-exclude

    XMLWordPrintable

Details

    Description

      Windows, debug version is below. On Linux release version, it ends with SIGFPE

       
      C:\work\10.5\xxx\extra\mariabackup\Debug>mariabackup --backup --databases-exclude=foobar -uroot
      [00] 2021-05-29 05:44:33 Connecting to MySQL server host: localhost, user: root, password: not set, port: not set, socket: not set
      [00] 2021-05-29 05:44:33 Using server version 10.5.11-MariaDB-debug
      mariabackup based on MariaDB server 10.5.11-MariaDB Win64 (AMD64)
      [00] 2021-05-29 05:44:33 cd to C:\work\10.5\xxx\sql\data\
      [00] 2021-05-29 05:44:33 open files limit requested 0, set to 0
      [00] 2021-05-29 05:44:33 mariabackup: using the following InnoDB configuration:
      [00] 2021-05-29 05:44:33 innodb_data_home_dir =
      [00] 2021-05-29 05:44:33 innodb_data_file_path = ibdata1:12M:autoextend
      [00] 2021-05-29 05:44:33 innodb_log_group_home_dir = .\
      2021-05-29  5:44:33 0 [Note] InnoDB: Number of pools: 1
      Assertion failed: table_size, file C:\work\10.5\storage\innobase\include\ut0rnd.ic, line 44
      210529  5:44:33 [ERROR] mysqld got exception 0x80000003 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed,
      something is definitely wrong and this may fail.
       
      Server version: 10.5.11-MariaDB-debug
      key_buffer_size=0
      read_buffer_size=131072
      max_used_connections=0
      max_threads=1
      thread_count=0
      It is possible that mysqld could use up to
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 5409 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x0
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      mariabackup.exe!my_sigabrt_handler()[my_thr_init.c:465]
      ucrtbase.dll!raise()
      ucrtbase.dll!abort()
      ucrtbase.dll!_get_wpgmptr()
      ucrtbase.dll!_get_wpgmptr()
      ucrtbase.dll!_wassert()
      mariabackup.exe!ut_hash_ulint()[ut0rnd.ic:44]
      mariabackup.exe!hash_table_t::calc_hash()[hash0hash.h:235]
      mariabackup.exe!xb_register_filter_entry()[xtrabackup.cc:4052]
      mariabackup.exe!xb_register_exclude_filter_entry()[xtrabackup.cc:4088]
      mariabackup.exe!xb_load_list_string()[xtrabackup.cc:4173]
      mariabackup.exe!xb_filters_init()[xtrabackup.cc:4229]
      mariabackup.exe!xtrabackup_backup_func()[xtrabackup.cc:4550]
      mariabackup.exe!main_low()[xtrabackup.cc:6943]
      mariabackup.exe!main()[xtrabackup.cc:6741]
      mariabackup.exe!__scrt_common_main_seh()[exe_common.inl:288]
      KERNEL32.DLL!BaseThreadInitThunk()
      ntdll.dll!RtlUserThreadStart()
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mysqld/ contains
      information that should help you find out what is causing the crash.
      Writing a core file at C:\work\10.5\xxx\sql\data\
      Minidump written to C:\work\10.5\xxx\sql\data\mariabackup.dmp
      

      Attachments

        Issue Links

          Activity

            People

              wlad Vladislav Vaintroub
              wlad Vladislav Vaintroub
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: