MDEV-25815 mariabackup crash or debug assert with --backup --databases-exclude

Fix regression (debug assertion or division by 0)
caused by cfd3d70ccbbfcf3fdec034be446317741dfae824